<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/ll_content1"
        android:layout_width="@dimen/ym_content_width"
        android:layout_height="@dimen/ym_content_heigth"
        android:layout_centerInParent="true"
        android:orientation="vertical">

    <include layout="@layout/ym_view_title" />

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="@dimen/ym_content_width"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/ym_bg">

        <!--登录分割线-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ym_line_height"
            android:layout_marginTop="@dimen/ym_margin5">

            <TextView
                android:id="@+id/ym_set_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@color/ym_edit_name"
                android:textSize="@dimen/text_size_f13"
                android:text="@string/ym_tv_setpwdtitle"/>

            <ImageView
                android:layout_width="@dimen/ym_line_width"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/ym_set_title"
                android:layout_marginEnd="@dimen/ym_edit_horizontal_margin1"
                android:src="@mipmap/ym_fenjiexian"/>

            <ImageView
                android:id="@+id/fengjiexian_right"
                android:layout_width="@dimen/ym_line_width"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/ym_edit_horizontal_margin1"
                android:layout_toEndOf="@id/ym_set_title"
                android:src="@mipmap/ym_fenjiexian"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ym_edit_height"
            android:layout_marginTop="@dimen/ym_margin5"
            android:layout_marginLeft="@dimen/ym_edit_horizontal_margin"
            android:layout_marginRight="@dimen/ym_edit_horizontal_margin"
            android:background="@mipmap/ym_edbg">

            <TextView
                android:layout_width="@dimen/ym_text_width"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/ym_padding"
                android:textColor="@color/ym_edit_name"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/text_size_f12"
                android:lines="1"
                android:text="手机号:"/>


            <EditText android:id="@+id/ym_et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/ym_edit_horizontal_margin"
                android:paddingStart="@dimen/ym_padding"
                android:paddingEnd="@dimen/ym_padding"
                android:layout_centerVertical="true"
                android:hint="@string/ym_account_hint"
                android:textColorHint="@color/ym_edit_hintcolor"
                android:textSize="@dimen/text_size_f12"
                android:maxLength="11"
                android:imeOptions="actionDone"
                android:textColor="@color/ym_edit_color"
                android:background="@null"
                android:digits="1234567890"
                android:inputType="phone"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ym_edit_height"
            android:layout_marginTop="@dimen/ym_margin10"
            android:layout_marginLeft="@dimen/ym_edit_horizontal_margin"
            android:layout_marginRight="@dimen/ym_edit_horizontal_margin"
            android:background="@mipmap/ym_edbg">

            <TextView
                android:layout_width="@dimen/ym_text_width"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/ym_padding"
                android:textColor="@color/ym_edit_name"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:lines="1"
                android:textSize="@dimen/text_size_f12"
                android:text="验证码:"/>


            <EditText android:id="@+id/ym_et_phonecode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ym_edit_horizontal_margin"
                android:layout_marginEnd="@dimen/ym_padding"
                android:layout_centerVertical="true"
                android:paddingStart="@dimen/ym_padding"
                android:paddingEnd="@dimen/ym_padding"
                android:hint="@string/ym_ethint_phonecode"
                android:textColorHint="@color/ym_edit_hintcolor"
                android:textSize="@dimen/text_size_f12"
                android:maxLength="6"
                android:textColor="@color/ym_edit_color"
                android:background="@null"
                android:layout_toStartOf="@id/ym_tv_phonecode"
                android:imeOptions="actionNext"
                android:inputType="number"/>

            <com.ym.game.sdk.ui.widget.TimerTextView android:id="@+id/ym_tv_phonecode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/ym_padding"
                android:visibility="visible"
                android:textColor="@color/ym_phonecode"
                android:textSize="@dimen/text_size_f12"
                android:text="@string/ym_tv_getphonecode"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ym_edit_height"
            android:layout_marginTop="@dimen/ym_margin10"
            android:layout_marginLeft="@dimen/ym_edit_horizontal_margin"
            android:layout_marginRight="@dimen/ym_edit_horizontal_margin"
            android:background="@mipmap/ym_edbg">

            <TextView
                android:layout_width="@dimen/ym_text_width"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/ym_padding"
                android:textColor="@color/ym_edit_name"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/text_size_f12"
                android:lines="1"
                android:text="新密码:"/>


            <EditText android:id="@+id/ym_et_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/ym_edit_horizontal_margin"
                android:layout_marginEnd="@dimen/ym_padding"
                android:paddingStart="@dimen/ym_padding"
                android:paddingEnd="@dimen/ym_padding"
                android:layout_centerVertical="true"
                android:hint="@string/ym_ethint_newpwd"
                android:textColorHint="@color/ym_edit_hintcolor"
                android:textSize="@dimen/text_size_f12"
                android:textColor="@color/ym_edit_color"
                android:layout_toStartOf="@id/ym_im_seepwd"
                android:maxLength="20"
                android:background="@null"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>

            <ImageView
                android:id="@+id/ym_im_seepwd"
                android:layout_width="@dimen/ym_showpwd_width"
                android:layout_height="@dimen/ym_showpwd_height"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/ym_margin5"
                android:src="@mipmap/ym_pwdhide"/>
        </RelativeLayout>

        <!--用户协议-->
        <RelativeLayout
            android:id="@+id/ym_ll_xieyi"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ym_xieyi_height"
            android:layout_marginTop="@dimen/ym_margin5"
            android:visibility="visible"
            android:layout_marginLeft="@dimen/ym_edit_horizontal_margin"
            android:layout_marginRight="@dimen/ym_edit_horizontal_margin">

            <ImageView
                android:id="@+id/ym_im_unck_xieyi"
                android:layout_width="@dimen/ym_xieyi_width"
                android:layout_height="@dimen/ym_xieyi_height"
                android:clickable="true"
                android:visibility="visible"
                android:focusable="true"
                android:src="@mipmap/ym_ckbox_unck"/>

            <ImageView
                android:id="@+id/ym_im_ck_xieyi"
                android:layout_width="@dimen/ym_xieyi_width"
                android:layout_height="@dimen/ym_xieyi_height"
                android:clickable="true"
                android:visibility="invisible"
                android:focusable="true"
                android:src="@mipmap/ym_ckbox_ck"/>


            <TextView
                android:id="@+id/ym_tv_xieyi1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ym_xieyi_height"
                android:layout_toEndOf="@id/ym_im_ck_xieyi"
                android:textSize="@dimen/text_size_f9"
                android:textColor="@color/ym_edit_name"
                android:text="@string/ym_xieyi1"/>
            <TextView
                android:id="@+id/ym_tv_xieyitext"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ym_xieyi_height"
                android:layout_toEndOf="@id/ym_tv_xieyi1"
                android:textSize="@dimen/text_size_f9"
                android:textColor="@color/ym_xieyi"
                android:clickable="true"
                android:text="@string/ym_xieyi2"/>
            <TextView
                android:id="@+id/ym_tv_xieyi2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ym_xieyi_height"
                android:layout_toEndOf="@id/ym_tv_xieyitext"
                android:textSize="@dimen/text_size_f9"
                android:textColor="@color/ym_edit_name"
                android:text="@string/ym_xieyi3"/>

            <TextView
                android:id="@+id/ym_tv_yinsitext"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ym_xieyi_height"
                android:layout_toEndOf="@id/ym_tv_xieyi2"
                android:textSize="@dimen/text_size_f9"
                android:textColor="@color/ym_xieyi"
                android:clickable="true"
                android:text="@string/ym_yinsi"/>

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/ym_ll_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ym_edit_horizontal_margin"
            android:layout_marginRight="@dimen/ym_edit_horizontal_margin"
            android:layout_marginTop="@dimen/ym_margin5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ym_bt_set"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ym_bind_height"
                android:text="@string/ym_bt_register"
                android:textColor="@color/ym_bt_login"
                android:background="@mipmap/ym_button_long"/>


        </LinearLayout>

        <TextView
            android:id="@+id/ym_tv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ym_margin5"
            android:layout_marginStart="@dimen/ym_edit_horizontal_margin"
            android:layout_marginEnd="@dimen/ym_edit_horizontal_margin"
            android:textColor="@color/ym_color_bindtip"
            android:textSize="@dimen/text_size_f8"
            android:visibility="visible"
            android:text="@string/ym_tv_set_tip"/>

    </LinearLayout>
    </LinearLayout>

</RelativeLayout>