<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/ll_content1"
        android:layout_width="@dimen/ym_content_width"
        android:layout_height="@dimen/ym_content_heigth"
        android:layout_centerInParent="true"
        android:orientation="vertical">

    <include layout="@layout/ym_view_title" />

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="@dimen/ym_content_width"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/ym_bg">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ym_edit_height"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:background="@mipmap/ym_edbg">

            <EditText
                android:id="@+id/login_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:background="@null"
                android:hint="@string/ym_account_hint"
                android:inputType="phone"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textColor="@color/ym_edit_color"
                android:textColorHint="@color/ym_edit_hintcolor"
                android:textSize="@dimen/ym_edit_font" />


            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:lines="1"
                android:paddingStart="6dp"
                android:text="手机号:"
                android:textColor="@color/ym_edit_name"
                android:textSize="@dimen/ym_edit_font" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ym_edit_height"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:background="@mipmap/ym_edbg">

            <EditText
                android:id="@+id/login_phonecode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/phonecode"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="70dp"
                android:layout_toStartOf="@id/phonecode"
                android:background="@null"
                android:hint="@string/ym_ethint_phonecode"
                android:inputType="textVisiblePassword"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textColor="@color/ym_edit_color"
                android:textColorHint="@color/ym_edit_hintcolor"
                android:textSize="@dimen/ym_edit_font" />


            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:lines="1"
                android:paddingStart="6dp"
                android:paddingEnd="2dp"
                android:text="验证码:"
                android:textColor="@color/ym_edit_name"
                android:textSize="@dimen/ym_edit_font" />

            <TextView
                android:id="@+id/phonecode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:textColor="@color/ym_phonecode"
                android:text="@string/ym_tv_getphonecode"
                android:textSize="@dimen/ym_edit_font"
                android:visibility="visible" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/ym_bt_unbind"
                android:layout_width="120dp"
                android:layout_height="32dp"
                android:layout_marginEnd="10dp"
                android:background="@mipmap/ym_button_short"
                android:text="@string/ym_bt_unbind"
                android:textColor="@color/ym_bt_login" />

            <Button
                android:id="@+id/ym_bt_bind"
                android:layout_width="120dp"
                android:layout_height="32dp"
                android:layout_marginStart="10dp"
                android:background="@mipmap/ym_button_short"
                android:text="@string/ym_bt_bind"
                android:textColor="@color/ym_bt_login" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/ym_color_bindtip"
            android:textSize="@dimen/ym_xieyi_font"
            android:visibility="gone"
            android:text="@string/ym_tv_bindtip"/>

    </LinearLayout>
    </LinearLayout>

</RelativeLayout>