<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">
    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="@dimen/ym_content_width"
        android:layout_height="@dimen/ym_content_heigth"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@mipmap/ym_bg">

        <include layout="@layout/ym_view_title" />
        <!--登录分割线-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ym_line_height"
            android:layout_marginTop="@dimen/ym_margin10">

            <TextView
                android:id="@+id/ym_set_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@color/ym_edit_name"
                android:textSize="@dimen/text_size_f13"
                android:text="@string/ym_tv_pwdlogintitle"/>

            <ImageView
                android:layout_width="@dimen/ym_line_width"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/ym_set_title"
                android:layout_marginEnd="@dimen/ym_edit_horizontal_margin1"
                android:src="@mipmap/ym_fenjiexian"/>

            <ImageView
                android:id="@+id/fengjiexian_right"
                android:layout_width="@dimen/ym_line_width"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/ym_edit_horizontal_margin1"
                android:layout_toEndOf="@id/ym_set_title"
                android:src="@mipmap/ym_fenjiexian"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/ym_rl_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ym_edit_height"
            android:layout_marginTop="@dimen/ym_margin10"
            android:layout_marginLeft="@dimen/ym_edit_horizontal_margin"
            android:layout_marginRight="@dimen/ym_edit_horizontal_margin"
            android:background="@mipmap/ym_edbg">

            <TextView
                android:layout_width="@dimen/ym_text_width"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/ym_padding"
                android:textColor="@color/ym_edit_name"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/text_size_f12"
                android:lines="1"
                android:text="账号:"/>


            <EditText android:id="@+id/ym_et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ym_text_width"
                android:layout_marginEnd="@dimen/ym_padding"
                android:paddingStart="@dimen/ym_padding"
                android:paddingEnd="@dimen/ym_padding"
                android:layout_centerVertical="true"
                android:hint="@string/ym_account_hint"
                android:textColorHint="@color/ym_edit_hintcolor"
                android:textSize="@dimen/text_size_f12"
                android:maxLength="11"
                android:textColor="@color/ym_edit_color"
                android:background="@null"
                android:imeOptions="actionNext"
                android:layout_toStartOf="@id/ym_im_arrow"
                android:digits="1234567890"
                android:inputType="phone"/>

            <ImageView
                android:id="@+id/ym_im_arrow"
                android:layout_width="@dimen/ym_arr_width"
                android:layout_height="@dimen/ym_arr_height"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:padding="1dp"
                android:layout_margin="@dimen/ym_margin5"
                android:src="@mipmap/ym_arr_down"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ym_edit_height"
            android:layout_marginTop="@dimen/ym_margin10"
            android:layout_marginLeft="@dimen/ym_edit_horizontal_margin"
            android:layout_marginRight="@dimen/ym_edit_horizontal_margin"
            android:background="@mipmap/ym_edbg">

            <TextView
                android:layout_width="@dimen/ym_text_width"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/ym_padding"
                android:textColor="@color/ym_edit_name"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:lines="1"
                android:textSize="@dimen/text_size_f12"
                android:text="密码:"/>


            <EditText android:id="@+id/ym_et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ym_edit_horizontal_margin"
                android:layout_marginEnd="@dimen/ym_padding"
                android:layout_centerVertical="true"
                android:paddingStart="@dimen/ym_padding"
                android:paddingEnd="@dimen/ym_padding"
                android:hint="@string/ym_ethint_pwd"
                android:textColorHint="@color/ym_edit_hintcolor"
                android:textSize="@dimen/text_size_f12"
                android:textColor="@color/ym_edit_color"
                android:layout_toStartOf="@id/ym_im_seepwd"
                android:background="@null"
                android:maxLength="20"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>
            <ImageView
                android:id="@+id/ym_im_seepwd"
                android:layout_width="@dimen/ym_showpwd_width"
                android:layout_height="@dimen/ym_showpwd_height"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/ym_margin5"
                android:src="@mipmap/ym_pwdhide"/>

        </RelativeLayout>

        <Button
            android:id="@+id/ym_bt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ym_login_height"
            android:layout_marginStart="@dimen/ym_edit_horizontal_margin"
            android:layout_marginEnd="@dimen/ym_edit_horizontal_margin"
            android:layout_marginTop="@dimen/ym_margin20"
            android:text="@string/ym_bt_login"
            android:textSize="@dimen/text_size_f14"
            android:textColor="@color/ym_bt_login"
            android:background="@mipmap/ym_button_long"/>

        <RelativeLayout
            android:id="@+id/ym_rl_accountset"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ym_xieyi_height"
            android:layout_marginTop="@dimen/ym_margin20"
            android:layout_marginLeft="@dimen/ym_edit_horizontal_margin"
            android:layout_marginRight="@dimen/ym_edit_horizontal_margin"
            android:visibility="gone">

            <TextView
                android:id="@+id/ym_tv_register"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ym_xieyi_height"
                android:layout_marginStart="@dimen/ym_margin2"
                android:textSize="@dimen/text_size_f11"
                android:textColor="@color/ym_tip_black"
                android:clickable="true"
                android:text="@string/ym_tv_register"/>

            <TextView
                android:id="@+id/ym_tv_setpwd"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ym_xieyi_height"
                android:layout_marginEnd="@dimen/ym_margin2"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/text_size_f11"
                android:textColor="@color/ym_tip_black"
                android:clickable="true"
                android:text="@string/ym_tv_setpwd"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/ym_tv_loginother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ym_edit_horizontal_margin"
            android:layout_marginEnd="@dimen/ym_edit_horizontal_margin"
            android:layout_marginTop="@dimen/ym_margin15"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_f14"
            android:textColor="@color/ym_edit_name"
            android:clickable="true"
            android:text="@string/ym_bt_loginohter"/>

    </LinearLayout>


</RelativeLayout>